code payment module and tesst demo